--- a/paper/main.tex
+++ b/paper/main.tex
@@ -29,14 +29,16 @@
 \newunicodechar{∀}{\ensuremath{\forall}}
 \newunicodechar{′}{\ensuremath{{}^\prime}}
 \newunicodechar{≡}{\ensuremath{\equiv}}
+\newunicodechar{₁}{\ensuremath{{}_1}}
 \newunicodechar{₂}{\ensuremath{{}_2}}
 \newunicodechar{≃}{\ensuremath{\simeq}}
 \newunicodechar{Γ}{\ensuremath{\ContextC}}
 \newunicodechar{Δ}{\ensuremath{\ContextD}}
 \newunicodechar{Θ}{\ensuremath{\ContextE}}
 \newunicodechar{∷}{\ensuremath{{::}}}
-\newunicodechar{×}{\ensuremath{\times}}
+% \newunicodechar{×}{\ensuremath{\times}}
 \newunicodechar{∃}{\ensuremath{\exists}}
+\newunicodechar{π}{\ensuremath{\pi}}
 
 %%%%%=============================================================================%%%%
 %%%%  Remarks: This template is provided to aid authors with the preparation
