--- a/paper/main.tex
+++ b/paper/main.tex
@@ -39,6 +39,7 @@
 % \newunicodechar{×}{\ensuremath{\times}}
 \newunicodechar{∃}{\ensuremath{\exists}}
 \newunicodechar{π}{\ensuremath{\pi}}
+\newunicodechar{⊒}{\ensuremath{\pcong}}
 
 %%%%%=============================================================================%%%%
 %%%%  Remarks: This template is provided to aid authors with the preparation
