--- a/paper/main.tex
+++ b/paper/main.tex
@@ -109,7 +109,8 @@
 \label{sec:introduction}
 
 \input{calculus}
-\input{formalization}
+\input{agda}
+% \input{formalization}
 
 \bibliography{main}
 
