--- a/paper/Congruence.tex
+++ b/paper/Congruence.tex
@@ -55,8 +55,8 @@
 \AgdaModule{Process}\<%
 \end{code}
 
-\subsection{Operational Semantics}
-\label{sec:semantics-agda}
+\subsection{Structural Pre-Congruence}
+\label{sec:congruence-agda}
 
 We formalize structural precongruence as a binary relation between processes
 that are well typed in the \emph{same} typing context. This entails that
