--- a/paper/main.tex
+++ b/paper/main.tex
@@ -29,8 +29,12 @@
 \newunicodechar{∀}{\ensuremath{\forall}}
 \newunicodechar{′}{\ensuremath{{}^\prime}}
 \newunicodechar{≡}{\ensuremath{\equiv}}
+\newunicodechar{₀}{\ensuremath{{}_0}}
 \newunicodechar{₁}{\ensuremath{{}_1}}
 \newunicodechar{₂}{\ensuremath{{}_2}}
+\newunicodechar{₃}{\ensuremath{{}_3}}
+\newunicodechar{↝}{\ensuremath{\leadsto}}
+\newunicodechar{⇒}{\ensuremath{\leadsto^*}}
 \newunicodechar{≃}{\ensuremath{\simeq}}
 \newunicodechar{Γ}{\ensuremath{\ContextC}}
 \newunicodechar{Δ}{\ensuremath{\ContextD}}
